objects/OBILLSwitchesObj__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CustomerEamil__c</fullName>
        <label>CustomerEamil</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IsAvailableForLive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox type testing purpose</description>
        <label>IsAvailableForLive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOFProductsPurchase__c</fullName>
        <label>NumberOFProductsPurchase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCost__c</fullName>
        <label>ProductCost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <label>ProductDescription</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFeedBackInfo__c</fullName>
        <label>ProductFeedBackInfo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductPurchaseDate__c</fullName>
        <label>ProductPurchaseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductSupportMobileNumber__c</fullName>
        <label>ProductSupportMobileNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ProductUrlInfo__c</fullName>
        <label>ProductUrlInfo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ProductUsagePercentage__c</fullName>
        <label>ProductUsagePercentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SwitchDateTime__c</fullName>
        <label>SwitchDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value</label>
        <type>Checkbox</type>
    </fields>
    <label>OBILLSwitches</label>
    <listViews>
        <fullName>CustomSeetingsViewAll</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>IsAvailableForLive__c</columns>
        <columns>NumberOFProductsPurchase__c</columns>
        <columns>ProductCost__c</columns>
        <columns>ProductDescription__c</columns>
        <columns>ProductFeedBackInfo__c</columns>
        <columns>ProductPurchaseDate__c</columns>
        <columns>ProductSupportMobileNumber__c</columns>
        <columns>ProductUrlInfo__c</columns>
        <columns>ProductUsagePercentage__c</columns>
        <columns>Value__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>CustomSeetingsViewAll</label>
    </listViews>
</CustomObject>